--- a/css/index.css
+++ b/css/index.css
@@ -53,8 +53,8 @@ h1, h2 {
 }
 
 input, button {
-  border: transparent;
-  outline: none;
+  border: none;
+  outline: 2px solid transparent;
   border-radius: 5px;
 }
 
@@ -67,16 +67,16 @@ body {
 }
 
 .portal__wrapper {
-  display: flex;
   min-height: 100vh;
+  display: flex;
 }
 .portal__wrapper__form {
-  width: 100%;
-  border-radius: 0 100px 0 0;
   display: grid;
   place-items: center;
+  width: 100%;
   background: #fff;
-  padding: 50px 20px;
+  border-radius: 0 100px 0 0;
+  padding: 50px 20px 0;
 }
 .portal__wrapper__form__wrapper {
   max-width: 400px;
@@ -86,11 +86,16 @@ body {
   margin-bottom: 20px;
 }
 .portal__wrapper__form__wrapper__title h1 {
-  color: #9F1015;
-  font-size: 3rem;
-}
-.portal__wrapper__form__wrapper__title h1, .portal__wrapper__form__wrapper__title h2 {
+  font-size: clamp(2rem, 1.375rem + 2vw, 2.5rem);
   margin-left: 10px;
+}
+.portal__wrapper__form__wrapper__title h1 span {
+  color: #9F1015;
+}
+.portal__wrapper__form__wrapper__title p {
+  margin-left: 10px;
+  color: #808080;
+  font-size: clamp(0.9rem, 0.775rem + 0.4vw, 1rem);
 }
 .portal__wrapper__form__wrapper__title::before {
   content: "";
@@ -98,6 +103,7 @@ body {
   width: 5px;
   height: 100%;
   background: #9F1015;
+  left: 0;
 }
 .portal__wrapper__form__wrapper__field {
   display: grid;
@@ -108,8 +114,16 @@ body {
 }
 .portal__wrapper__form__wrapper__field__input input {
   width: 100%;
+  background: #eeeeee;
+  border-radius: 5px;
   padding: 25px 15px 10px;
-  background: #EEEEEE;
+  transition: 0.3s ease-in-out;
+}
+.portal__wrapper__form__wrapper__field__input input:focus {
+  outline: 2px solid #9F1015;
+}
+.portal__wrapper__form__wrapper__field__input input:focus ~ label {
+  color: #9F1015;
 }
 .portal__wrapper__form__wrapper__field__input label {
   position: absolute;
@@ -118,41 +132,44 @@ body {
   color: #808080;
   transition: 0.3s ease-in-out;
 }
-.portal__wrapper__form__wrapper__field__input #show-hide-pass {
+.portal__wrapper__form__wrapper__field__input img {
   position: absolute;
-  top: 21px;
   right: 15px;
-  width: 1.2rem;
 }
-.portal__wrapper__form__wrapper__field__input a {
-  color: #9F1015;
-  float: right;
-  font-size: 0.9rem;
+.portal__wrapper__form__wrapper__field__input #show-hide-pass {
+  width: 18px;
+  top: 21px;
+  cursor: pointer;
 }
 .portal__wrapper__form__wrapper__field__input #captcha-img {
-  position: absolute;
-  top: 15px;
-  right: 15px;
+  top: 14px;
   opacity: 0;
   visibility: hidden;
-  transition: 0.3s ease;
+  transition: 0.3s ease-in-out;
 }
-.portal__wrapper__form__wrapper__field__input.focus #captcha-img {
-  opacity: 1;
-  visibility: visible;
+.portal__wrapper__form__wrapper__field__input #forgot-pass {
+  float: right;
+  color: #9F1015;
+  font-size: 0.9rem;
+  margin: 3px 0 7px;
 }
 .portal__wrapper__form__wrapper__field__input.focus label {
   font-size: 0.8rem;
   top: 5px;
 }
+.portal__wrapper__form__wrapper__field__input.focus #captcha-img {
+  visibility: visible;
+  opacity: 1;
+}
 .portal__wrapper__form__wrapper__field__button {
-  margin-top: 25px;
+  margin-top: 20px;
 }
 .portal__wrapper__form__wrapper__field__button button {
-  padding: 17.5px;
   width: 100%;
   background: #9F1015;
+  padding: 15px;
   color: #fff;
+  cursor: pointer;
 }
 .portal__wrapper__form__wrapper__field #terms {
   font-size: 0.9rem;
@@ -161,13 +178,12 @@ body {
   color: #9F1015;
 }
 .portal__wrapper__hero {
-  width: 100%;
-  background: url(../assets/ue-bg.png) center no-repeat;
-  background-size: cover;
   display: grid;
   place-items: center;
+  width: 100%;
+  background: url(../assets/ue-bg.png) no-repeat;
+  background-size: cover;
   border-radius: 0 0 0 100px;
-  padding: 20px;
   position: relative;
 }
 .portal__wrapper__hero::before {
@@ -183,7 +199,7 @@ body {
 .portal__wrapper__hero img {
   max-width: 350px;
 }
-@media screen and (max-width: 1024px) {
+@media only screen and (max-width: 1024px) {
   .portal__wrapper {
     flex-direction: column-reverse;
     justify-content: flex-end;
@@ -192,13 +208,14 @@ body {
     border-radius: 50px 0 0 0;
   }
   .portal__wrapper__hero {
+    padding: 20px;
     border-radius: 0 0 50px 0;
-  }
-  .portal__wrapper__hero::before {
-    top: 125px;
-    left: 0;
   }
   .portal__wrapper__hero img {
     max-width: 100px;
+  }
+  .portal__wrapper__hero::before {
+    left: 0;
+    top: 125px;
   }
 }/*# sourceMappingURL=index.css.map */
