--- a/scss/layout/_portal.scss
+++ b/scss/layout/_portal.scss
@@ -1,31 +1,35 @@
 .portal{
     &__wrapper{
-        display: flex;
         min-height: 100vh;
-        
+        display: flex;
+
         &__form{
-            width: 100%;
-            border-radius: 0 100px 0 0;
             display: grid;
             place-items: center;
+            width: 100%;
             background: #fff;
-            padding:50px  20px;
-            
-            
+            border-radius: 0 100px 0 0;
+            padding: 50px 20px 0;
+
             &__wrapper{
                 max-width: 400px;
-                
 
                 &__title{
                     position: relative;
                     margin-bottom: 20px;
+
                     h1{
-                        color: #9F1015;
-                        font-size: 3rem;
+                    font-size: clamp(2rem, 1.375rem + 2vw, 2.5rem);
+                    margin-left: 10px;
+                        span{
+                            color: #9F1015;;
+                        }
                     }
 
-                    h1,h2{
+                    p{  
                         margin-left: 10px;
+                        color: #808080;
+                        font-size: clamp(0.9rem, 0.775rem + 0.4vw, 1rem);
                     }
 
                     &::before{
@@ -34,6 +38,7 @@
                         width: 5px;
                         height: 100%;
                         background: #9F1015;
+                        left: 0;
                     }
                 }
 
@@ -41,93 +46,101 @@
                     display: grid;
                     gap: .5rem;
 
-                    
-
                     &__input{
                         position: relative;
-                        
-                        
+
                         input{
                             width: 100%;
+                            background: #eeeeee;
+                            border-radius: 5px;
                             padding: 25px 15px 10px;
-                            background: #EEEEEE;
+                            transition: .3s ease-in-out;
+
+                            &:focus{
+                                outline: 2px solid #9F1015;
+                            }
+
+                            &:focus ~ label{
+                                color: #9F1015;
+                            }
                         }
 
                         label{
                             position: absolute;
                             left: 15px;
-                            top: 17.5px;
+                            top: 17.5px ;
                             color: #808080;
                             transition: .3s ease-in-out;
                         }
 
-                        #show-hide-pass{
+                        img{
                             position: absolute;
-                            top: 21px;
                             right: 15px;
-                            width: 1.2rem;
                         }
 
-                        a{
-                            color: #9F1015;
-                            float: right;
-                            font-size: .9rem;
+                        #show-hide-pass{
+                            width: 18px;
+                            top: 21px;
+                            cursor: pointer;
                         }
 
                         #captcha-img{
-                            position: absolute;
-                            top: 15px;
-                            right: 15px;
+                            top: 14px;
                             opacity: 0;
                             visibility: hidden;
-                            transition: .3s ease;
+                            transition: .3s ease-in-out;
                         }
 
-                        &.focus #captcha-img{
-                            opacity: 1;
-                            visibility: visible;
+                        #forgot-pass{
+                            float: right;
+                            color: #9F1015;
+                            font-size: .9rem;
+                            margin: 3px 0 7px;
                         }
+
 
                         &.focus label{
                             font-size: .8rem;
                             top: 5px;
                         }
-                        
+
+                        &.focus #captcha-img{
+                            visibility: visible;
+                            opacity: 1;
+                        }
                     }
 
                     &__button{
-
-                        margin-top: 25px;
+                        margin-top: 20px;
                         button{
-                            padding:17.5px;
                             width: 100%;
                             background: #9F1015;
+                            padding: 15px;
                             color: #fff;
+                            cursor: pointer;
                         }
-
                     }
 
                     #terms{
-                            font-size: .9rem;
-                            
-                            a{
-                                color: #9F1015;
-                            }
+                        font-size: .9rem;
+
+                        a{
+                            color: #9F1015;
+                        }
                     }
                 }
             }
         }
 
         &__hero{
-            width: 100%;
-            background: url(../assets/ue-bg.png) center no-repeat;
-            background-size: cover;
             display: grid;
             place-items: center;
+            width: 100%;
+            background: url(../assets/ue-bg.png) no-repeat;
+            background-size: cover;
             border-radius: 0 0 0 100px;
-            padding: 20px;
             position: relative;
-
+            
             &::before{
                 content: '';
                 position: absolute;
@@ -138,30 +151,32 @@
                 left: -100px;
                 z-index: -1;
             }
-            
+
             img{
                 max-width: 350px;
             }
 
+
         }
 
-        @media screen and (max-width:1024px) {
+        @media only screen and (max-width:1024px) {
             flex-direction: column-reverse;
-            justify-content:flex-end;
+            justify-content: flex-end;
 
             &__form{
                 border-radius: 50px 0 0 0;
             }
 
             &__hero{
+                padding: 20px;
                 border-radius: 0 0 50px 0;
+                img{
+                    max-width: 100px;
+                }
 
                 &::before{
-                    top: 125px;
                     left: 0;
-                }
-                img{
-                    max-width:100px ;
+                    top: 125px;
                 }
             }
         }
